fix wrong small letters

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@ watch it
 
 <body bgcolor="yellow">
 <p > <h4 align="center" >
-  (((welcome to website)))  
+  (((Welcome to website)))  
 <p>
-   <marquee>((favourite video))</marquee> 
+   <marquee>((Favourite video))</marquee> 
 
 
 
@@ -23,23 +23,23 @@ watch it
 
 <h2>
 
-(this page save the video🔥)
+(This page saves the video🔥)
 </h2>
  <h1> <h3 align="center" >
-((the page creator)) </h1>
+((The page creator)) </h1>
 
 <table border="1" align="center"> 
 <td>
 <table border="1" align="center"
 <tr>
 
-<td> name: <td> omar elsayed </td>
+<td> Name: <td> Omar Elsayed </td>
 </tr>
  <td> Age: <td> 12 years old </td> </td>
 <tr>
  <td> Data of birth <td> 9/9/2009 </td> </td>
 </tr>
-<td> country: </td> <td> Egypt </td>
+<td> Country: </td> <td> Egypt </td>
 </td>
 </table>
 
